compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__nested_type_parameter_usage.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub type Returned(a) {\n  Returned(List(a))\n}\n\nfn wibble(user: Returned(#())) -> Int {\n  let Returned([#()]) = user\n  1\n}\n"
---
----- SOURCE CODE

pub type Returned(a) {
  Returned(List(a))
}

fn wibble(user: Returned(#())) -> Int {
  let Returned([#()]) = user
  1
}


----- ERROR
error: Inexhaustive pattern
  ┌─ /src/one/two.gleam:7:3
  │
7 │   let Returned([#()]) = user
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^

This assignment uses a pattern that does not match all possible values. If
one of the other values is used then the assignment will crash.

The missing patterns are:

    Returned([#(), _, ..])
    Returned([])

Hint: Use a more general pattern or use `let assert` instead.
